// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Question Should show info 1`] = `
<body>
  <div>
    <article
      class="question"
    >
      <header>
        <h4>
          mockTitle
        </h4>
        <button
          class="btn"
          data-testid="show-btn"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 448 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M416 208H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h384c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
            />
          </svg>
        </button>
      </header>
      <p>
        mockInfo
      </p>
    </article>
  </div>
</body>
`;

exports[`Question should render correctly 1`] = `
<article
  className="question"
>
  <header>
    <h4>
      mockTitle
    </h4>
    <button
      className="btn"
      data-testid="show-btn"
      onClick={[Function]}
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        strokeWidth="0"
        style={
          Object {
            "color": undefined,
          }
        }
        viewBox="0 0 448 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
        />
      </svg>
    </button>
  </header>
</article>
`;
